@@ -1,3 +1,12 @@
+2017-04-03  Ville Voutilainen  <ville.voutilainen@gmail.com>
+
+	Implement std::is_aggregate.
+	* include/std/type_traits (is_aggregate, is_aggregate_v): New.
+	* testsuite/20_util/is_aggregate/requirements/explicit_instantiation.cc:
+	New.
+	* testsuite/20_util/is_aggregate/requirements/typedefs.cc: Likewise.
+	* testsuite/20_util/is_aggregate/value.cc: Likewise.
+
 2017-03-29  Ville Voutilainen  <ville.voutilainen@gmail.com>
 
 	Adjust optional's pretty printer for LWG 2900.
